--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,6 +3,6 @@
 <% @portfolio_items.each do |portfolio_item| %> 
   <p> <%= portfolio_item.title %> </p>
   <p> <%= portfolio_item.subtitle %> </p>
-  <p> <%= image_tag portfolio_item.image %> </p>
-  <im> <%= image_tag portfolio_item.thumb_image %> </p>
+ <p> <%= portfolio_item.body %> </p>
+ <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %> 
 <% end %> 
