--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,10 +6,11 @@
 <p> <%=  new_portfolio_path %></p>
 <p> <%=  new_portfolio_url %></p>
 <% @portfolio_items.each do |portfolio_item| %> 
-  <h3><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %> </h3>
+  <h3><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %> </h3>
   <p> <%= portfolio_item.subtitle %> </p>
  <p> <%= portfolio_item.body %> </p>
  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %> 
  <%= link_to "Edit", edit_portfolio_path(portfolio_item.id)%>
+ <%= link_to 'Delete', portfolio_item, method: :delete, data: { confirm: 'Are you sure?' } %>
 
 <% end %> 
