--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -11,6 +11,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    
     <% if !current_user.is_a?(OpenStruct) %>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
@@ -18,6 +19,7 @@
         <%= link_to "Login", new_user_session_path %>
     <% end %>
     <%= yield %>
+    <%= render "shared/nav", location: "bottom" %>
     <% if session[:source] %>
         <p>Thanks for visiting me from <%= session[:source] %></p>
     <% end %>
