--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -11,7 +11,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: "top" %>
     <% if !current_user.is_a?(OpenStruct) %>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
@@ -19,6 +19,7 @@
         <%= link_to "Login", new_user_session_path %>
     <% end %>
     <%= yield %>
+    
     <% if session[:source] %>
         <p>Thanks for visiting me from <%= session[:source] %></p>
     <% end %>
