--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -21,6 +21,10 @@
     <%= form.text_area :body, id: :blog_body %>
   </div>
 
+  <div class="field">
+    <%= form.label :topic %>
+    <%= form.collection_select :topic_id, Topic.order(:title),:id,:title, include_blank: false %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
