added bootstrap and copyright

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
      <%= render "shared/nav", location: "top" %>
     <%= login_helper %>
     <%= yield %>
+    <br>
+    <%= @copyright %>
     <%= source_helper %>
   </body>
 </html>
