--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,7 +1,7 @@
 <h1> Angular Portfolio Items </h1>
 
 
-<%= link_to "Create new item", new_portfolio_path %> 
+<%= link_to "Create new item", new_portfolio_path if logged_in?(:site_admin)  %> 
 
 <p> <%=  new_portfolio_path %></p>
 <p> <%=  new_portfolio_url %></p>
@@ -10,7 +10,7 @@
   <p> <%= portfolio_item.subtitle %> </p>
  <p> <%= portfolio_item.body %> </p>
  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %> 
- <%= link_to "Edit", edit_portfolio_path(portfolio_item.id)%>
- <%= link_to 'Delete', portfolio_item, method: :delete, data: { confirm: 'Are you sure?' } %>
+ <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
+ <%= link_to 'Delete', portfolio_item, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
 
 <% end %> 
