--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,9 @@
 <h1> Portfolio Items </h1>
 
 
-<%= link_to "Create new item", new_portfolio_path %> 
+<%= link_to "Create new item", new_portfolio_path if logged_in?(:site_admin) %> 
 
-<p> <%=  new_portfolio_path %></p>
-<p> <%=  new_portfolio_url %></p>
+<p> <%=  new_portfolio_path if logged_in?(:site_admin) %></p>
+<p> <%=  new_portfolio_url if logged_in?(:site_admin) %></p>
 <%= render partial: 'portfolio_item', collection: @portfolio_items %> 
   
