--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,17 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-     <%= render "shared/nav", location: "top" %>
-    <%= login_helper %>
-    <%= yield %>
-    <br>
-    <%= @copyright %>
-    <%= source_helper %>
+  <div class="site-wrapper">
+    <div class="site-wrapper-inner">
+      <div class="cover-container">
+        <%= render "shared/application_nav" %>
+        <%= login_helper %>
+        <%= yield %>
+        <br>
+        <%= @copyright %>
+        <%= source_helper %>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
