--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
     <div class="site-wrapper-inner">
       <div class="cover-container">
         <%= render "shared/application_nav" %>
-        <%= login_helper %>
+        
         <%= yield %>
         <br>
-        <%= @copyright %>
+        <%= render '/shared/application_footer'%>
         <%= source_helper %>
       </div>
     </div>
