--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -7,6 +7,7 @@
       <%= link_to "Contact", pages_contact_path, class: 'nav-link' %>
       <%= link_to "Blog", blogs_path, class: 'nav-link' %>
       <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
+      <%= login_helper 'nav-link' %>
     </nav>
   </div>
 </div>
