--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -159,3 +159,13 @@ body {
     width: 52rem;
   }
 }
+
+/* Custom Styles */
+.card-block{
+  color:black;
+  text-align: left;
+}
+
+.auth-links a{
+  color:black;
+}
