--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= @page_title %></title>
-    <%= csrf_meta_tags %>
-    <meta name="keywords" content="<%= @seo_keywords%>"></meta>
-    <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title><%= @page_title %></title>
+  <%= csrf_meta_tags %>
+  <meta name="keywords" content="<%= @seo_keywords%>"></meta>
+  <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-  <%= login_helper %>
-    <%= yield %>
-    <%= render "shared/nav", location: "bottom" %>
-   <%= source_helper %>
-  </body>
+<body>
+
+  <div class="blog-masthead">
+    <div class="container">
+      <nav class="nav blog-nav">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#">New features</a>
+        <a class="nav-link" href="#">Press</a>
+        <a class="nav-link" href="#">New hires</a>
+        <a class="nav-link" href="#">About</a>
+      </nav>
+    </div>
+  </div>
+
+  <div class="blog-header">
+    <div class="container">
+      <h1 class="blog-title">The Bootstrap Blog</h1>
+      <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+     <%= yield %>
+     <br>
+     <%= render '/shared/application_footer'%>
+     <%= source_helper %>
+   </div>
+ </div>
+</body>
 </html>
