--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,7 +22,9 @@
     <div class="container">
       <h1 class="blog-title">The Bootstrap Blog</h1>
       <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+      <%= link_to 'Write a New Blog Post', new_blog_path if logged_in?(:site_admin)%>
     </div>
+
   </div>
 
   <div class="container">
