--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,21 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, id: :blog_title %>
+    <%= form.text_field :title, id: :blog_title, class:'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :body %>
-    <%= form.text_area :body, id: :blog_body %>
+    <%= form.text_area :body, id: :blog_body, class:'form-control', rows: 20 %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :topic %>
     <%= form.collection_select :topic_id, Topic.order(:title),:id,:title, include_blank: false %>
   </div>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Save", class: 'btn btn-primary' %>
   </div>
 <% end %>
