added font awesome and pagination

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -11,20 +11,8 @@
 </head>
 
 <body>
-
-  <div class="blog-masthead">
-    <div class="container">
-      <%= render 'shared/blog_nav' %>
-    </div>
-  </div>
-
- <div class="blog-header">
-  <div class="container">
-    <h1 class="blog-title">The Bootstrap Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-    <%= link_to 'Write a New Blog Post', new_blog_path if logged_in?(:site_admin)%>
-  </div>
-</div>
+  <%= render 'shared/blog_nav' %>
+  <%= render 'shared/blog_masthead'%>
 
 <div class="container">
   <div class="row">
@@ -34,11 +22,6 @@
     <%= source_helper %>
   </div>
 </div>
-<footer class="blog-footer">
- <%= render '/shared/application_footer'%>
- <p>
-  <a href="#">Back to top</a>
-</p>
-</footer>
+<%= render 'shared/blog_footer'%>
 </body>
 </html>
