added style to portfolio show pages

--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -2,6 +2,6 @@
   <div class="container">
   <%= render '/shared/application_footer'%>
     <p class="float-right">
-      <a href="#">Back to top</a>
+      <%= link_to "View All Portfolio Items", portfolios_path %> | <a href="#">Back to top</a>
     </p>
 </footer>
