--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,18 +1,22 @@
-
-<p><%= image_tag @portfolio_item.image %>
+<div class="container">
+<div class="row">
+<div class='col-md-7'>
+<%= image_tag @portfolio_item.image %>
+</div>
+<div class='col-md-5'>
 <h1> <%= @portfolio_item.title %> </h1>
+<hr>
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body %></p>
-
-<h2>Technologies Used</h2>
+<h3>Technologies Used:</h3>
 
 <% @portfolio_item.technologies.each do |t| %>
 <p><%= t.name %></p>
 
 <% end %>
-<!-- 
-<hr>
-<%= params.inspect %>
-<hr>
+</div>
+</div>
+</div>
 
-<%= session.inspect %> -->
+
+
