--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,7 +15,7 @@
     <%= render 'shared/portfolio_nav'%>
     <!-- End Nav --> 
     <!-- Begin MasHead -->
-    <%= render 'shared/portfolio_masthead'%>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin)%>
     <!-- End MasHead --> 
     <%= yield %>
     <!--  Begin footer --> 
