--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,5 @@
-<h1> Create a new portfolio Items </h1>
+<div class='container'>
+<h1> Create a Portfolio Item </h1>
 
 <%= render "form", portfolio_item: @portfolio_item %>
+</div>
