--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ body {
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: .25rem 4px;
   font-weight: bold;
   color: rgba(255,255,255,.5);
   background-color: transparent;
@@ -179,4 +179,14 @@ body {
   margin: 0 auto;
   float:none;
   margin-bottom: 10px;
+}
+
+.nav-link{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.app-nav{
+  margin-left:15px;
+  margin-right:15px;
 }
