added an image to about me

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class='container'>
+<h1>About Zack </h1>
+
+<div class="row">
+  <div class='col-md-6'>
+    <%= image_tag 'https://scontent.flim5-1.fna.fbcdn.net/v/t1.0-9/17498472_10102843183544934_2301763183777696939_n.jpg?oh=976ba53ec1386ba94b102b777788c8a5&oe=59D4E487', width: 300, height: 300,  alt: 'some info' %>
+  </div>
+  <div class='col-md-6'>
+    <p>This is info about me</p>
+  </div>
+</div>
+</div>
+
