--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+
 }
 body {
   color: #fff;
@@ -189,4 +189,23 @@ body {
 .app-nav{
   margin-left:15px;
   margin-right:15px;
+}
+
+#background{
+  position: fixed;
+  top: 50%;
+  left:50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background: url('https://scontent.flim5-1.fna.fbcdn.net/v/t1.0-9/17498472_10102843183544934_2301763183777696939_n.jpg?oh=976ba53ec1386ba94b102b777788c8a5&oe=59D4E487') no-repeat;
+  background-size: cover;
+}
+
+.app-footer{
+  color:white;
 }
