--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
       <div class="cover-container">
-        <div id='background'> </div>
+        <!-- <div id='background'> </div> -->
+        <%= video_tag 'https://www.videvo.net/app/stream.php?id=2747', id: 'background',  autoplay: true, loop: true, muted: true %>
         <%= render "shared/application_nav" %>
         
         <%= yield %>
