--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,5 +1,6 @@
-<div class='container'>
+<div class='container portfolio-container'>
 <h1> Create a Portfolio Item </h1>
-
+<div class='portfolio-container'>
 <%= render "form", portfolio_item: @portfolio_item %>
+</div>
 </div>
