--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -12,10 +12,14 @@
     </div>
 
     <div class="form-group">
-      <%= form.file_field :image %>  
+      <label class='btn btn-primary btn-block'>
+      Upload Main Image <%= form.file_field :image, style: 'display:none;' %>  
+      </label>
     </div>
     <div class="form-group">
-      <%= form.file_field :thumb_image %>
+      <label class='btn btn-primary btn-block'>
+      Upload Thumb Image <%= form.file_field :thumb_image, style: 'display:none;' %>  
+      </label>
     </div>
 
   </div>
