added gritter for notifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         <%= yield %>
         <br>
         <%= render '/shared/application_footer'%>
+        <%= render 'shared/alerts' %>
         <%= source_helper %>
       </div>
     </div>
