refactored alerts into helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <%= yield %>
         <br>
         <%= render '/shared/application_footer'%>
-        <%= render 'shared/alerts' %>
+        <%= alerts %>
         <%= source_helper %>
       </div>
     </div>
