--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -22,5 +22,6 @@
      <%= render 'shared/portfolio_footer'%>
     <!-- End footer -->
     <%= source_helper %>
+    <%= alerts %>
   </body>
 </html>
