added some style for tech_news page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -210,3 +210,19 @@ body {
 .app-footer{
   color:white;
 }
+
+.tech-news{
+  color: black;
+  margin:20px;
+}
+
+.tech-news a{
+  color: yellow;
+}
+
+.tech-news > .card {
+  padding: 30px;
+}
+.tech-news-container{
+  padding-top:60px;
+}
