--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,6 +1,4 @@
-
-
-<div class="inner cover">
+<div class="tech-news-container">
   <h1 class="cover-heading">Latest From Twitter</h1>
   <div class="row">
     <% @tweets.each do |tweet| %>
