--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,15 +5,7 @@
   <p><%= @blog.body %></p>
 
   <!-- Start of Comment Form -->
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_with(model: @comment, url: '#') do |f| %>
-      <div class='form-group'>
-        <%= f.label :content %>
-        <%= f.text_area :content, class: 'form-control', rows: 4 %>
-      </div>
-      <%= f.submit 'Comment', class: 'btn btn-primary' %>
-    <% end %>
-  <% end %>
+  <%= render 'comments/comment_form'%>
   <!-- End of Comment Form -->
 
   <!-- Start of Comments -->
