added gravatar for comments, added a helper to publish the gravatar image and updated the styles for formatting a comment

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,10 +3,14 @@
     <div class='card-block'>
       <div class='row'>
         <div class='col-md-1'>
-          
+          <%= gravitar_helper comment.user %>
         </div>
         <div class='col-md-11'>
-          <%= comment.content %>
+          <div><%= comment.content %></div>
+          <div class='comment-attribution'>
+            posted by <span class='comment-name' ><%= comment.user.name %> </span> <%= distance_of_time_in_words(comment.created_at, Time.now) %> ago
+          </div>
+          
         </div>
       </div>
     </div>
