--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -158,6 +158,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top:20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -173,4 +174,17 @@ h6, .h6 {
 .social-links li{
   font-size: 2em;
   text-align: center;
+}
+
+.comment-card > .card{
+  margin-top:15px;
+}
+
+.comment-attribution{
+  font-style: italic;
+  font-size: .8em;
+}
+
+.comment-name{
+  font-weight: 700;
 }
