added scope for recent blogs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -226,3 +226,13 @@ body {
 .tech-news-container{
   padding-top:60px;
 }
+
+.topics{
+  margin: 20px;
+}
+
+.topic-title
+{
+  color: black;
+  margin: 20px;
+}
