--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -152,6 +152,12 @@ h6, .h6 {
   color: #999;
 }
 
+.blog-topic{
+  font-style: italic;
+  font-weight: 600;
+  font-size: .8em;
+}
+
 
 /*
  * Footer
