--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,8 +17,14 @@
 
   <div class="form-group">
     <%= form.label :topic %>
-    <%= form.collection_select :topic_id, Topic.order(:title),:id,:title, include_blank: false %>
+    <%= form.collection_select :topic_id, Topic.order(:title), :id, :title, include_blank: true %>
   </div>
+
+  <div class="form-group">
+    <%= form.label :status, "Published" %>
+    <%= form.check_box :status, {}, "published", 'draft' %>
+  </div>
+
   <div class="actions">
     <%= form.submit "Save", class: 'btn btn-primary' %>
   </div>
