--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,26 +2,25 @@
 
 <h1>Topics</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class='row'>
+  <% @topics.each do |topic| %>
+    <div class='col-md-4'>
+      <div class='topics'>
+        <div class='card'>
+          <div class='topic-title'><%= topic.title%></div>
+          <div class=''>
+            <%if logged_in?(:site_admin) %>
+               <%= link_to 'Edit', edit_topic_path(topic), class: 'btn btn-warning' %> <%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
-  <tbody>
-    <% @topics.each do |topic| %>
-      <tr>
-        <td><%= topic.title %></td>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Topic', new_topic_path %>
+<div class="row"> 
+  <div class='col-md-4'></div>
+  <div class='col-md-4'><%= link_to 'New Topic', new_topic_path, class: 'btn btn-primary block' %></div>
+  <div class='col-md-4'></div>
+</div>
