--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <h1 class="blog-title">My Blog</h1>
     <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-    <%= link_to 'Write a New Blog Post', new_blog_path if logged_in?(:site_admin)%>
+    <span><%= link_to 'Write a New Blog Post', (new_blog_path if logged_in?(:site_admin)), class: 'btn btn-primary'%></span>
+    <span><%= link_to 'Topics', topics_path, class: 'btn btn-primary'%></span>
   </div>
 </div>
