--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,7 +1,13 @@
+<div class="col-sm-8 blog-main">
 <p id="notice"><%= notice %></p>
 
 <h1>Topics</h1>
-
+<div class="row"> 
+  <div class='col-md-4'></div>
+  <div class='col-md-4'></div>
+  <div class='col-md-4'><%= link_to 'New Topic', new_topic_path, class: 'btn btn-primary block' %></div>
+</div>
+</div>
 <div class='row'>
   <% @topics.each do |topic| %>
     <div class='col-md-4'>
@@ -19,8 +25,3 @@
   <% end %>
 </div>
 
-<div class="row"> 
-  <div class='col-md-4'></div>
-  <div class='col-md-4'><%= link_to 'New Topic', new_topic_path, class: 'btn btn-primary block' %></div>
-  <div class='col-md-4'></div>
-</div>
