--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,10 @@
     <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
   <div class="sidebar-module">
+    <%= render 'shared/topic_widget' %>
+  </div>
+
+  <div class="sidebar-module">
     <h4>Social</h4>
     <ol class="list-unstyled social-links">
       <li><a href="#"><%= fa_icon 'github' %></a></li>
