--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,7 +3,7 @@
   <h2><%= @blog.title %></h2>
   <span class="blog-topic"> <%= @blog.topic.title if @blog.topic %> </span> <br>
   <%= link_to 'Edit', edit_blog_path(@blog) %> | <%= link_to 'Back', blogs_path %>
-  <p><%= @blog.body %></p>
+  <p><%= markdown @blog.body %></p>
 
   <!-- Start of Comment Form -->
   <%= render 'comments/comment_form'%>
